Clean up code. Creates setters and getters for prior public variables.